add sorting to books catalogue
